--- a/slides/scss/_type.scss
+++ b/slides/scss/_type.scss
@@ -56,19 +56,16 @@
 
 	align_left {
 		text-align: left;
-		background-color: purple;
 		display: block;
 	}
 
 	align_center {
 		text-align: center;
-		background-color: red;
 		display: block;
 	}
 
 	align_right {
 		text-align: right;
-		background-color: pink;
 		display: block;
 	}
 }
